package klausur;

enum KlausurTyp {
    ONLINE, PRAESENZ
}
